--- a/theater/single.html
+++ b/theater/single.html
@@ -14,11 +14,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- Custom Theme files -->
 <link href="css/style.css" rel='stylesheet' type='text/css' media="all" />
 <script src="js/jquery-1.11.1.min.js"></script>
-<!--start-smoth-scrolling-->
-<!-- fonts -->
-<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-<link href='http://fonts.useso.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-<!-- //fonts -->
 </head>
   <body>
 
@@ -613,7 +608,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li><a href="copyright.html">Copyright</a></li>
 								<li><a href="creators.html">Creators</a></li>
 								<li><a href="#">Advertise</a></li>
-								<li><a href="developers.html">Developers</a></li>
+								<li><a href="about.html">Developers</a></li>
 							</ul>
 						</div>
 						<div class="footer-bottom-nav">
